# REAL-TIME-FACIAL-DYNAMIC-CAPTURE-AND-RECONSTRUCTION-APPLIED-FOR-LIFELIKE-DIGITAL-HUMAN-HEAD-MODEL

./: .gitignore  CMakeLists.txt  DecaView.py  FANView.py  README.md  environment.lock.yml  imgui.ini  main_train.py  obj2gltf.py  obj2gltfV2.py  obj2gltfV3.py  obj2gltfV4.py  obj2gltfV5.py  obj2ply.py  output_animation.glb  vcpkg-configuration.json  vcpkg.json  viewFLAME.py  viewnpy.py  viewnpz.py  viewpkl.py
Training/: cleaning_updated.py  label_specified_visualized_track.py  reconstruct_benchmark.py
configs/release_version/: deca_pretrain.yml
decalib/: deca.py  trainer.py
decalib/datasets/: build_datasets.py  datasets.py  now.py  vggface.py
decalib/models/: FLAME.py  encoders.py  lbs.py
decalib/utils/: config.py  renderer.py
decalib/utils/rasterizer/: standard_rasterize_cuda.cp311-win_amd64.pyd  standard_rasterize_cuda.cp37-win_amd64.pyd
decalib/utils/rasterizer/standard_rasterize_cuda.egg-info/: PKG-INFO
demos/: demo_reconstruct.py  demo_teaser.py  demo_transfer.py
output/0001_03/Kpt2d/: 0001_03_kpt2d.txt
output/0001_03/Kpt3d/: 0001_03_kpt3d.txt
output/0001_03/Model/: 0001_03.mtl
output/IMG_0392_inputs/Kpt2d/: IMG_0392_inputs_kpt2d.txt
output/IMG_0392_inputs/Kpt3d/: IMG_0392_inputs_kpt3d.txt
output/IMG_0392_inputs/Model/: IMG_0392_inputs.mtl
output/image03786/Kpt2d/: image03786_kpt2d.txt
output/image03786/Kpt3d/: image03786_kpt3d.txt
output/image03786/Model/: image03786.mtl
shaders/: fragment.glsl  vertex.glsl
shaders/deprecated/: vertex.glsl
src/: Camera.cpp  Camera.hpp  Main.cpp  Model.cpp  Model.hpp  Retinex.py  Shader.cpp  Shader.hpp  TextureLoader.cpp  TextureLoader.hpp  face_construct.py  face_reconstruct.py  face_transfer.py  mybridge.cpp  obj2glb.py  progress_shared.cpp  progress_shared.hpp
src/deprecated/: Main_morph_target_animationV1.cpp  Model.cpp  Model.hpp  ProgessBar_in_RespectivePanel.cpp  TimeLineV0.cpp
